--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -28,7 +28,7 @@ author1:
   social:
     # twitter:         <username>
     github:          janghunn
-    email:           teekey.kim@gmail.com
+    # email:           teekey.kim@gmail.com
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
