--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -2,22 +2,18 @@
 # If you don't have a JSON Resume you can just edit this YAML file instead.
 # See also: <https://jsonresume.org/>.
 basics:
-  name: "Richard Hendricks"
+  name: "Janghun Kim"
   label: "Programmer"
   picture: "https://via.placeholder.com/240x240"
-  email: ""
-  phone: "(912) 555-4321"
-  website: "https://piedpiper.com"
+  email: "teekey.kim@gmail.com"
+  #phone: "(912) 555-4321"
+  #website: "https://piedpiper.com"
   summary: >
-    Richard hails from Tulsa.
-    He has earned degrees from the University of Oklahoma and Stanford. (Go Sooners and Cardinals!)
-    Before starting Pied Piper, he worked for Hooli as a part time software developer.
-    While his work focuses on applied information theory,
-    mostly optimizing lossless compression schema of both the length-limited and adaptive variants,
-    his non-work interests range widely,
-    everything from quantum computing to chaos theory.
-    He could tell you about it, but THAT would NOT be a “length-limited” conversation!
-    Open `_data/resume.yml` to edit this text.
+    저는 현재 렌더링을 연구하고 공부하고 있는 예비 개발자입니다 :)
+
+    현재는 성균관대학교에서 컴퓨터그래픽스 전공으로 석사과정을 진행 중에 있습니다. 학부는 성균관대학교 소프트웨어학과를 졸업하였습니다.
+    저는 컴퓨터공학을 전공하면서 다른 칙칙한 코딩(제 기준)보다는 렌더링이 너무 재밌기도 하고 어려워서 더 좋았습니다. 특히, 수학적인 사고와 물리적인 현상에 대한 공부를 더 요구해서 딱 제 스타일이였습니다
+
   location:
     address: "2712 Broadway St"
     postalCode: "CA 94115"
@@ -25,12 +21,12 @@ basics:
     countryCode: "US"
     region: "California"
   profiles:
-    - network: "Twitter"
-      username: "RHendricksCEO"
-      url: ""
+    - network: "Github"
+      username: "janghunn"
+      url: "https://github.com/janghunn"
     - network: "LinkedIn"
-      username: "Richard Hendricks"
-      url: ""
+      username: "janghunn"
+      url: "https://www.linkedin.com/in/janghunn/"
 work:
   - company: "Pied Piper"
     position: "CEO/President"
