--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -11,6 +11,7 @@ basics:
   summary: >
     저는 현재 렌더링을 연구하고 공부하고 있는 예비 개발자입니다 :)
 
+    
     현재는 성균관대학교에서 컴퓨터그래픽스 전공으로 석사과정을 진행 중에 있습니다. 학부는 성균관대학교 소프트웨어학과를 졸업하였습니다.
     저는 컴퓨터공학을 전공하면서 다른 칙칙한 코딩(제 기준)보다는 렌더링이 너무 재밌기도 하고 어려워서 더 좋았습니다. 특히, 수학적인 사고와 물리적인 현상에 대한 공부를 더 요구해서 딱 제 스타일이였습니다
 
@@ -28,8 +29,8 @@ basics:
       username: "janghunn"
       url: "https://www.linkedin.com/in/janghunn/"
 work:
-  - company: "University of Sungkyunkwan, CG Lab."
-    position: "Real-Time Graphics Research"
+  - company: "Univ. of Sungkyunkwan, CG Lab."
+    position: "Real-Time Rendering Research"
     website: "http://cg.skku.edu/"
     startDate: "2021-01-01"
     endDate: ""
