--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -52,26 +52,38 @@ work:
 #     highlights:
 #       - "Awarded 'Teacher of the Month'"
 education:
-  - institution: "University of Oklahoma"
-    area: "Information Technology"
+  - institution: "Busan-il Science High School"
+    #area: ""
+    studyType: "Early Graduation"
+    startDate: "2015-03-01"
+    endDate: "2017-02-01"
+    #gpa: ""    
+  - institution: "University of Sungkyunkwan"
+    area: "Computer Science and Engineering"
     studyType: "Bachelor"
-    startDate: "2011-06-01"
-    endDate: "2014-01-01"
-    gpa: "4.0"
-    courses:
-      - "DB1101 - Basic SQL"
-      - "CS2011 - Java Introduction"
+    startDate: "2017-03-01"
+    endDate: "2022-08-01"
+    gpa: "3.96"
+    # courses:
+    #   - "DB1101 - Basic SQL"
+    #   - "CS2011 - Java Introduction"
+  - institution: "University of Sungkyunkwan"
+    area: "Computer Science and Engineering"
+    studyType: "Master"
+    startDate: "2022-09-01"
+    endDate: ""
+    #gpa: "3.96"    
 # awards:
 #   - title: "Digital Compression Pioneer Award"
 #     date: "2014-11-01"
 #     awarder: "Techcrunch"
 #     summary: "There is no spoon."
 publications:
-  - name: "Video compression for 3d media"
-    publisher: "Hooli"
-    releaseDate: "2014-10-01"
-    website: "https://en.wikipedia.org/wiki/Silicon_Valley_(TV_series)"
-    summary: "Innovative middle-out compression algorithm that changes the way we store data."
+  - name: "Potentially Visible Hidden-Volume Rendering for Multi-View Warping"
+    publisher: "ACM"
+    releaseDate: "2023-08-01"
+    website: "https://dl.acm.org/doi/abs/10.1145/3592108"
+    summary: "This paper presents the model and rendering algorithm of Potentially Visible Hidden Volumes (PVHVs) for multi-view image warping. PVHVs are 3D volumes that are occluded at a known source view, but potentially visible at novel views. Given a bound of novel views, we define PVHVs using the edges of foreground fragments from the known view and the bound of novel views. PVHVs can be used to batch-test the visibilities of source fragments without iterating individual novel views in multi-fragment rendering, and thereby, cull redundant fragments prior to warping. We realize the model of PVHVs in Depth Peeling (DP). Our Effective Depth Peeling (EDP) can reduce the number of completely hidden fragments, capture important fragments early, and reduce warping cost. We demonstrate the benefit of our PVHVs and EDP in terms of memory, quality, and performance in multi-view warping."
 skills:
   - name: "Web Development"
     level: "Master"
