--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -9,11 +9,7 @@ basics:
   #phone: "(912) 555-4321"
   #website: "https://piedpiper.com"
   summary: |
-    저는 현재 렌더링을 연구하고 공부하고 있는 예비 개발자입니다 :)
-    
-    현재는 성균관대학교에서 컴퓨터그래픽스 전공으로 석사과정을 진행 중에 있습니다. 학부는 성균관대학교 소프트웨어학과를 졸업하였습니다.
-    저는 컴퓨터공학을 전공하면서 다른 칙칙한 코딩(제 기준)보다는 렌더링이 너무 재밌기도 하고 어려워서 더 좋았습니다. 특히, 수학적인 사고와 물리적인 현상에 대한 공부를 더 요구해서 딱 제 스타일이였습니다
-
+    I’m a math/science enthusiast who prefers the beauty of rendered visuals over a plain black screen :)
   # location:
   #   address: "2712 Broadway St"
   #   postalCode: "CA 94115"
@@ -76,7 +72,7 @@ education:
     studyType: "Master"
     startDate: "2022-09-01"
     endDate: ""
-    #gpa: "3.96"    
+    gpa: "4.0"    
 # awards:
 #   - title: "Digital Compression Pioneer Award"
 #     date: "2014-11-01"
