--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -44,7 +44,8 @@ work:
     startDate: "2022-06-01"
     endDate: "2022-11-30"
     summary: |
-      asdsadassda
+      Using multiple-plane RGB images and additional Depth maps,
+      we worked on a project to synthesize and improve novel-views.
     highlights:
       - "A project to process novel-view images with known-view multiple-plane RGBZ images."
       - "My role: Modifying the Encoding Format(add depth info.), Novel-View Synthesis using Forward Warping"
