--- a/_config.yml
+++ b/_config.yml
@@ -104,12 +104,12 @@ google_fonts:          Roboto+Slab:700|Noto+Sans:400,400i,700,700i
 
 # The text font. Expects a string that is a valid CSS font-family value.
 # To change font-weight, see _sass/variables.scss
-font:                  Noto Sans, Helvetica, Arial, sans-serif
-
+#font:                  Noto Sans, Helvetica, Arial, sans-serif
+font:                  Arial
 # The font used for headings. Expects a string that is a valid CSS font-family value.
 # To change font-weight, see _sass/variables.scss
-font_heading:          Roboto Slab, Helvetica, Arial, sans-serif
-
+#font_heading:          Roboto Slab, Helvetica, Arial, sans-serif
+font_heading:          Arial
 # The font used for code blocks. Expects a string that is a valid CSS font-family value.
 font_code:             Fira Code, Menlo, Monaco, Consolas, monospace;
 
