--- a/_config.yml
+++ b/_config.yml
@@ -49,10 +49,10 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title:             Posts
-    url:               /blog/
-  - title:             Projects
-    url:               /projects/
+  # - title:             Posts
+  #   url:               /blog/
+  # - title:             Projects
+  #   url:               /projects/
   - title:             Resume
     url:               /resume/
   # - title:             Documentation
