--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -9,7 +9,10 @@ basics:
   #phone: "(912) 555-4321"
   #website: "https://piedpiper.com"
   summary: |
-    I’m a math/science enthusiast who prefers the beauty of rendered visuals over a plain black screen :)
+    Hi, I’m Janghun Kim and Master Student from University of Sungkyunkwan.
+    I majored Computer Graphics, especially Real-Time Rendering.
+    I'm a novice and I know for myself that I'm not good enough.
+    However, I'm confident that i will learn quickly and do well :)
   # location:
   #   address: "2712 Broadway St"
   #   postalCode: "CA 94115"
