--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ menu:
   #   url:               /blog/
   # - title:             Projects
   #   url:               /projects/
+  - title:             About
+    url:               /about/  
   - title:             Resume
     url:               /resume/
   # - title:             Documentation
