--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -98,7 +98,7 @@ skills:
     keywords:
       - "C++"
   - name: "Shader Programming"
-    level: "amateur"
+    level: "junior"
     keywords:
       - "OpenGL"
       - "GLSL"      
