--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -4,7 +4,7 @@
 basics:
   name: "Janghun Kim"
   label: "Programmer"
-  picture: "https://via.placeholder.com/240x240"
+  picture: /assets/img/logo.png
   email: "teekey.kim@gmail.com"
   #phone: "(912) 555-4321"
   #website: "https://piedpiper.com"
