--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -52,6 +52,16 @@ work:
     highlights:
       - "A project to process novel-view images with known-view multiple-plane RGBZ images."
       - "My role: Modifying the Encoding Format(add depth info.), Novel-View Synthesis using Forward Warping"
+  - company: "SKKU, CG Lab. with Samsung Electronics"
+    position: "Real-time Video Rendering "
+    website: "http://cg.skku.edu/fund/"
+    startDate: "2023-04-01"
+    endDate: "2023-08-30"
+    summary: |
+      Security Reasons
+    highlights:
+      - "Security Reasons"
+      - "My role: C++ programming, Shader Programming"      
 # volunteer:
 #   - organization: "CoderDojo"
 #     position: "Teacher"
