--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -58,9 +58,9 @@ work:
     startDate: "2023-04-01"
     endDate: "2023-08-30"
     summary: |
-      Security Reasons
+      For Security Reasons
     highlights:
-      - "Security Reasons"
+      - "For Security Reasons"
       - "My role: C++ programming, Shader Programming"      
 # volunteer:
 #   - organization: "CoderDojo"
